--- a/VitAl/VitAl Watch/VitAl Watch.entitlements
+++ b/VitAl/VitAl Watch/VitAl Watch.entitlements
@@ -4,5 +4,15 @@
 <dict>
 	<key>com.apple.developer.healthkit</key>
 	<true/>
+	<key>com.apple.developer.healthkit.access</key>
+	<array>
+		<string>health-records</string>
+	</array>
+	<key>com.apple.developer.healthkit.background-delivery</key>
+	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.natefelix.healthcompanion.shared</string>
+	</array>
 </dict>
 </plist>
